@@ -182,34 +182,34 @@ BOOST_AUTO_TEST_CASE(signerParameters)
 
     const unsigned char digest[] = "Signature";
     vector<unsigned char> signature;
-    BOOST_CHECK_NO_THROW(signature = signer->sign("http://www.w3.org/2000/09/xmldsig#rsa-sha1",
+    BOOST_CHECK_NO_THROW(signature = signer->sign("http://www.w3.org/2001/04/xmlenc#sha256",
         vector<unsigned char>(digest, digest+sizeof(digest))));
 
-    const unsigned char sig[] = {
-        0x8F, 0x05, 0x7B, 0x15, 0xC8, 0x9B, 0x18, 0x76, 0x93, 0x70, 0xA2, 0x3A,
-        0x15, 0xC2, 0x64, 0xCD, 0x20, 0x1F, 0x18, 0x8D, 0xDA, 0xC9, 0xFD, 0x68,
-        0xB0, 0x25, 0xF4, 0x16, 0xCC, 0xF3, 0xC0, 0x6A, 0x77, 0x90, 0x00, 0x0E,
-        0x52, 0x27, 0x57, 0xE8, 0x86, 0x7D, 0xB9, 0x53, 0xDB, 0x7E, 0x76, 0x84,
-        0xA9, 0x3D, 0xB4, 0x73, 0x48, 0x8B, 0xC1, 0xCD, 0x72, 0x53, 0xC6, 0x3C,
-        0xB3, 0xBD, 0x4E, 0x65, 0x2E, 0x36, 0xE3, 0x60, 0x8F, 0xED, 0xE5, 0x05,
-        0xA7, 0x91, 0xE5, 0x8F, 0x00, 0x1C, 0x6C, 0x50, 0xB5, 0x98, 0x95, 0xD3,
-        0x4B, 0x0B, 0x6D, 0x7F, 0x58, 0xD1, 0xCD, 0x10, 0x2B, 0x4C, 0xA8, 0x2B,
-        0xD8, 0xB5, 0x41, 0x97, 0xCB, 0x9B, 0x05, 0x93, 0x87, 0xC7, 0x3E, 0x41,
-        0xCD, 0x6E, 0x28, 0xB9, 0x6F, 0xDE, 0x91, 0xAD, 0xC8, 0x90, 0x90, 0xB6,
-        0x48, 0x62, 0x37, 0x43, 0xBC, 0x71, 0xE3, 0x85, 0x9D, 0x31, 0xAD, 0x21,
-        0x7B, 0xCD, 0x33, 0xF6, 0x37, 0x34, 0x95, 0x10, 0x4E, 0x86, 0xEE, 0x30,
-        0x42, 0x70, 0xBB, 0x59, 0x33, 0xB3, 0x90, 0x22, 0x16, 0xAA, 0x9E, 0x34,
-        0xFA, 0x7C, 0xAA, 0x7F, 0x40, 0x31, 0xE9, 0xA0, 0x7F, 0xC8, 0xE0, 0x25,
-        0x45, 0x23, 0x14, 0x32, 0x05, 0x17, 0x00, 0x74, 0x41, 0xC9, 0x5C, 0xA1,
-        0xE3, 0xDF, 0x60, 0x55, 0x72, 0xDB, 0x10, 0x7A, 0x2D, 0x87, 0x65, 0x5E,
-        0xC2, 0xB3, 0x5F, 0xB6, 0xE6, 0x53, 0xD8, 0x76, 0xAA, 0x70, 0xFB, 0x93,
-        0x7D, 0xB0, 0xB2, 0x47, 0x02, 0xFC, 0x00, 0xFB, 0x83, 0xD5, 0x9A, 0x22,
-        0xD0, 0x5C, 0xAA, 0xB3, 0x33, 0xDB, 0x2D, 0xEB, 0x35, 0x82, 0xC8, 0x5D,
-        0x08, 0x3A, 0xAD, 0xCA, 0x4E, 0x34, 0x30, 0x78, 0x7A, 0x07, 0xB8, 0x30,
-        0x81, 0x02, 0x4E, 0x99, 0xBD, 0x2C, 0x9E, 0x93, 0x14, 0x6F, 0x0C, 0x56,
-        0xE7, 0x58, 0x07, 0x91
+    const vector<unsigned char> sig = {
+        0x17, 0x2F, 0x5B, 0x7D, 0x16, 0x27, 0x32, 0x86, 0x4E, 0xF1, 0x97, 0x62,
+        0x2B, 0x6E, 0x5E, 0x03, 0x52, 0x48, 0x6C, 0x14, 0xE0, 0x0C, 0xE8, 0xBB,
+        0xA7, 0x88, 0x9D, 0x06, 0x08, 0x9A, 0x1A, 0x33, 0xA8, 0xD7, 0x96, 0x10,
+        0x32, 0xE0, 0xF1, 0x57, 0x85, 0xB7, 0x04, 0x59, 0x27, 0x34, 0xCB, 0x74,
+        0xD1, 0xCB, 0xE5, 0x2C, 0x28, 0xD7, 0xF8, 0x9E, 0x2C, 0x14, 0x5B, 0xCA,
+        0xBC, 0x14, 0x29, 0xD2, 0xC7, 0xC7, 0x6A, 0xC3, 0x02, 0x82, 0x21, 0x83,
+        0x7D, 0x64, 0xD3, 0xB6, 0x7E, 0x46, 0xDE, 0x46, 0xCB, 0x60, 0xE7, 0x0C,
+        0xB3, 0x13, 0xBD, 0x85, 0x55, 0xF2, 0x19, 0xAB, 0xD7, 0x60, 0x8F, 0xF3,
+        0x11, 0xAB, 0xD8, 0x36, 0x3A, 0x54, 0x5C, 0xA8, 0x16, 0x0F, 0x09, 0xFC,
+        0x6F, 0xCA, 0x8C, 0x60, 0xDF, 0xCF, 0x9F, 0x1D, 0xA4, 0xF4, 0xF8, 0x61,
+        0x0F, 0x68, 0xC3, 0x80, 0xB0, 0xD9, 0x07, 0xB9, 0x85, 0x72, 0xE7, 0x2E,
+        0x10, 0xED, 0xB2, 0xB4, 0xD7, 0xFA, 0x8D, 0xA5, 0xB0, 0x87, 0x21, 0x9A,
+        0xAD, 0x26, 0xB6, 0x89, 0x60, 0x13, 0x7B, 0x72, 0x59, 0x2B, 0xCF, 0x0E,
+        0x6B, 0xBB, 0x04, 0x87, 0xCB, 0x1D, 0x1A, 0x15, 0x37, 0x2D, 0x9C, 0x91,
+        0xFA, 0xA5, 0x7E, 0x45, 0xA7, 0x85, 0x7A, 0x7E, 0x77, 0x9B, 0x66, 0x44,
+        0xC4, 0xCE, 0x63, 0xA6, 0xFC, 0x8F, 0xD0, 0x8F, 0xD4, 0xA0, 0x8A, 0x68,
+        0x82, 0xBA, 0x71, 0x94, 0x65, 0xF7, 0x01, 0x79, 0x7D, 0xDB, 0xCB, 0x06,
+        0x27, 0xF6, 0xC7, 0x05, 0xA6, 0x7F, 0xAE, 0x0B, 0x85, 0x94, 0x3A, 0x8A,
+        0xB0, 0x7F, 0xA6, 0x42, 0xA2, 0x6D, 0x3E, 0x22, 0x0B, 0xBF, 0xE9, 0xDA,
+        0x70, 0xAF, 0xDF, 0x78, 0xBA, 0x73, 0xB4, 0xCC, 0xD3, 0x14, 0x76, 0x78,
+        0xB3, 0x64, 0x5B, 0x78, 0x33, 0xE1, 0x73, 0x9F, 0xD4, 0x5F, 0x43, 0xCD,
+        0xDB, 0x63, 0x96, 0x52
     };
-    BOOST_CHECK_EQUAL(signature, vector<unsigned char>(sig, sig+sizeof(sig)));
+    BOOST_CHECK_EQUAL(signature, sig);
 }
 BOOST_AUTO_TEST_SUITE_END()
 
